[B]Retrospect v5.1.6 - Changelog - 2020-01-23[/B]

This update contains a fix for VRT.nu that broken again!

[B]Framework related[/B]
-

[B]GUI/Settings/Language related[/B]
-

[B]Channel related[/B]
* Fixed: VRT.nu updated some HTML pages again! (Fixes #1281)