@@ -9,4 +9,5 @@ This update contains a fix for VRT.nu that broken again!
 -
 
 [B]Channel related[/B]
+* Updated: MTG Viafree channel - enhance look and feel (Fixes #1285)
 * Fixed: VRT.nu updated some HTML pages again! (Fixes #1281)
